<resources>
    <string name="app_name">FindMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="rut">Ingrese RUT</string>
    <string name="nombre">Ingrese Nombre</string>
    <string name="apellido">Ingrese Apellido</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="email">Ingrese Email</string>
    <string name="password">Ingrese Password</string>
    <string name="enviar_registro">REGISTRAR</string>
    <string name="api_key">AIzaSyBtAEWE00113qBxz9RidrFwODyv4sWmYkI</string>
    <string name="menu_home">FindMe</string>
    <string name="nav_header_subtitle">find@me.cl</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_usuarios">Usuarios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_slide">MenuSlideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="msg_token_fmt" />
    <string name="default_notification_channel_id">default</string>
    <string name="channel_name">CH_ID_01</string>

</resources>
