<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_24"
            android:title="@string/menu_usuarios" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_circle_24"
            android:title="Perfil" />
        <item
            android:id="@+id/nav_register_person"
            android:icon="@drawable/ic_person_add_24"
            android:title="Registar persona" />
    </group>
</menu>