<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUserActivity">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <EditText
                android:id="@+id/textRut"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/rut"
                android:singleLine="true" />

            <EditText
                android:id="@+id/textNombre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/nombre"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/textApellido"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/apellido"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textNacimiento"
                    android:layout_width="240dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/fecha_nacimiento"
                    android:singleLine="true"
                    android:textSize="16dp" />

                <ImageButton
                    android:id="@+id/imageButtonDateUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_calendar_today_24" />

            </LinearLayout>

            <EditText
                android:id="@+id/textMail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/textPasswordConfirmed"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="Confime Password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/buttonEnviarRegistro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/baton_redondo"
                android:text="@string/enviar_registro" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>